# macrors

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  operator.rs  repeat.rs  strings.rs  tests.rs
