[package]
name = "macrors"
version = "0.2.0"
edition = "2021"

authors = ["photowey <photowey@gmail.com>"]
license = "Apache-2.0"

documentation = "https://docs.rs/macrors"
repository = "https://github.com/photowey/macrors"
homepage = "https://github.com/photowey/macrors"

description = """
A simple custom macro library in Rust.
"""

readme = "README.md"
keywords = ["macro", "operator", "ternary", "development-tools"]
# See more categories and their definitions at https://crates.io/category_slugs
categories = ["development-tools::procedural-macro-helpers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]